objects/Customer_At_Risk__c/Customer_At_Risk__c.object-meta.xml
<CustomObject>
    <description>Information why a customer is at risk</description>
    <label>Customer At Risk</label>
    <nameField>
        <displayFormat>At Risk {0000}</displayFormat>
        <label>Customer At Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer At Risk</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>