objects/Customer_At_Risk__c/fields/Account_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Account_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User Lookup for Account Consultant</description>
    <label>Account Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_At_Risk</relationshipName>
    <type>Lookup</type>
</CustomField>