objects/Customer_At_Risk__c/fields/Actions_Taken_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken_to_Resolve__c</fullName>
    <description>Detail steps to take to resolution</description>
    <inlineHelpText>Please enter all steps taken and to be taken to get resolution of issues.</inlineHelpText>
    <label>Actions Taken to Resolve</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>