objects/Customer_At_Risk__c/fields/Contract_End_Date_for_Majorit_of_MRR__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_for_Majorit_of_MRR__c</fullName>
    <label>Contract End Date for Majority of MRR?</label>
    <required>true</required>
    <type>Date</type>
</CustomField>