objects/Customer_At_Risk__c/fields/Credit_Issued__c.field-meta.xml
<CustomField>
    <fullName>Credit_Issued__c</fullName>
    <description>Was there a credit issued?</description>
    <label>Credit Issued</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>