objects/Customer_At_Risk__c/fields/Prior_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Prior_Risk_Level__c</fullName>
    <label>Prior Risk Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>