objects/Customer_At_Risk__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Picklist - Product</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated Internet</fullName>
            </value>
            <value>
                <fullName>VPN/MPLS</fullName>
            </value>
            <value>
                <fullName>Ethernet Services</fullName>
            </value>
            <value>
                <fullName>Wavelength</fullName>
            </value>
            <value>
                <fullName>Private Line</fullName>
            </value>
            <value>
                <fullName>VPLS</fullName>
            </value>
            <value>
                <fullName>Dark Fiber</fullName>
            </value>
            <value>
                <fullName>Basic Voice</fullName>
            </value>
            <value>
                <fullName>Long Distance</fullName>
            </value>
            <value>
                <fullName>Toll Free</fullName>
            </value>
            <value>
                <fullName>ISDN/PRI</fullName>
            </value>
            <value>
                <fullName>Managed PBX</fullName>
            </value>
            <value>
                <fullName>Hosted Voice</fullName>
            </value>
            <value>
                <fullName>Hosted PBX</fullName>
            </value>
            <value>
                <fullName>SIP Solutions/NGN SIP Trunking</fullName>
            </value>
            <value>
                <fullName>UC (UCCV &amp; MiCloud)</fullName>
                <label>UC (UCCV &amp; MiCloud &amp; HCS)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>