objects/Customer_At_Risk__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Picklist - Product Family</description>
    <label>Primary Product Family At Risk</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Voice (SIP &amp; UC)</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Legacy Hosted/Managed Services</fullName>
            </value>
            <value>
                <fullName>Legacy Voice Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>