objects/Customer_At_Risk__c/fields/Reason_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Reason_At_Risk__c</fullName>
    <description>Reason why at risk</description>
    <label>Reason At Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Decision</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Delivery Issues</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Repair Issues</fullName>
            </value>
            <value>
                <fullName>Sales Misrepresentation</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>