objects/Customer_At_Risk__c/fields/Total_Account_MRR__c.field-meta.xml
<CustomField>
    <fullName>Total_Account_MRR__c</fullName>
    <formula>Account__r.MRR__c</formula>
    <label>Total Account MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>