objects/Customer_At_Risk__c/validationRules/Cedit_Issued_required_when_Resolved.validationRule-meta.xml
<ValidationRule>
    <fullName>Cedit_Issued_required_when_Resolved</fullName>
    <active>false</active>
    <description>Require comments when resolved</description>
    <errorConditionFormula>ISPICKVAL(  Status__c  , &quot;resolved&quot;)
&amp;&amp; ISPICKVAL(   Credit_Issued__c , &quot;&quot; )</errorConditionFormula>
    <errorDisplayField>Credit_Issued__c</errorDisplayField>
    <errorMessage>Credit Issued is required when At Risk is resolved</errorMessage>
</ValidationRule>