objects/Customer_At_Risk__c/validationRules/Credit_Amount_Required_Credit_Issued_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Amount_Required_Credit_Issued_Yes</fullName>
    <active>false</active>
    <description>If Credit issued = yes then require credit amount</description>
    <errorConditionFormula>ISPICKVAL( Credit_Issued__c , &quot;yes&quot;)
&amp;&amp; ISBLANK( Credit_Amount__c )</errorConditionFormula>
    <errorDisplayField>Credit_Amount__c</errorDisplayField>
    <errorMessage>If credit is given, credit amount is required</errorMessage>
</ValidationRule>